# yadc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: example.toml  example_full.toml  example_local.toml  example_official_gemini.toml  example_official_openai.toml  example_official_openrouter.toml  example_prompt_template.toml  example_prompt_template_booru.toml
docs/: ADVANCED_USAGE.md  CLI_USAGE.md  FAQ.md  README.md
templates/: example_booru.jinja
tests/: conftest.py
tests/captioners/api/: conftest.py  test_gemini.py  test_koboldcpp.py  test_llamacpp.py  test_openai.py  test_openrouter.py
tests/captioners/api/test_data/: gemini_stream.txt  koboldcpp_stream.txt  koboldcpp_stream_result.txt  openai_o4_mini.txt  openai_o4_mini_stream_result.txt  openrouter_gpt_5_mini.txt  openrouter_gpt_5_mini_stream_result.txt
tests/captioners/api/test_data/nonstreaming/: gemini.txt  gemini_result.txt  koboldcpp.txt  koboldcpp_result.txt  llamacpp.txt  llamacpp_cot.txt  llamacpp_cot_result.txt  llamacpp_result.txt  openai_o4_mini.txt  openai_o4_mini_result.txt  openrouter_gpt_5_mini.txt  openrouter_gpt_5_mini_result.txt  openrouter_qwen3_vl.txt  openrouter_qwen3_vl_result.txt
tests/captioners/api/test_data/streaming/: gemini_result.txt  llamacpp.txt  llamacpp_cot.txt  llamacpp_cot_result.txt  llamacpp_result.txt  openrouter_qwen3_vl.txt  openrouter_qwen3_vl_result.txt
tests/cli/: README.md  conftest.py  test_cli_local.py  test_cli_official.py
tests/cli/test_data/: .gitignore  test_pedro.dataset
yadc/: __init__.py  __main__.py  cli.py  cli_caption.py  cli_common.py  cli_config.py  cli_configs.py  cli_envs.py  cli_logging.py  cli_template.py  cli_templates.py  cli_utils.py
yadc/captioners/api/: __init__.py  api_captioner.py  base.py  captioner.py  gemini.py  koboldcpp.py  llamacpp.py  mixins.py  ollama.py  openai.py  openapi.py  openrouter.py  session.py  types.py  utils.py  vllm.py
yadc/captioners/api/utils/: __init__.py  cache.py  error_normalization.py  thinking.py
yadc/captioners/hf_transformers/: __init__.py  base.py  gemma_3n_captioner.py  hf_transfomers_captioner.py  qwen3_vl_captioner.py
yadc/cmd/: app.py  status.py
yadc/cmd/configs/: __init__.py  configs.py
yadc/cmd/envs/: __init__.py  encryption.py  envs.py  setting.py  user_config.py
yadc/cmd/templates/: __init__.py  templates.py
yadc/core/: __init__.py  captioner.py  config.py  dataset.py  env.py  logging.py  user_config.py  utils.py
yadc/templates/: __init__.py  default.jinja  templates.py  user_templates.py
