[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yadc"
version = "0.7.0"
description = "Yet Another Dataset Captioner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "platformdirs>=4.4.0",
    "keyring>=25.6.0",
    "keyring-pass>=0.9.3",
    "click>=8.3.0",
]

[project.optional-dependencies]
test = [
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-integration>=0.2.3",
    "pytest-timeout>=2.4.0",
    "requests-mock>=1.12.1",
]

[project.scripts]
yadc = "yadc.cli:cli"

[tool.setuptools.package-data]
"yadc.templates" = ["*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yadc*"]

[tool.pytest.ini_options]
timeout = 5
